terraform/ec2.tf


resource "aws_instance" "Consumer" {
  subnet_id              = data.aws_subnet.public_subnet_eu_west_1a.id
  depends_on             = [aws_security_group.ec2_security_group, aws_iam_instance_profile.ec2_instance_profile]
  ami                    = "ami-0d940f23d527c3ab1"
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.ec2_security_group.id]
  iam_instance_profile   = aws_iam_instance_profile.ec2_instance_profile.name
  

}

resource "aws_security_group" "ec2_security_group" {
  vpc_id = data.aws_vpc.main.id
  name   = "ec2_security_group"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
